test/netlist/error/invalid-pipe-arity.bop
C(e, f) = out
where
  out = And(e, external[2]("./external.exe", f));
end where;
